test/error/semantic/redefinition_func.kat
func add(a: int, b: int) => int {
  return a + b;
}

func add(a: int, b: int) => int {
  return b + a;
}

func main(argc: int, argv: str) => int {
  return 0;
}
